Fixed issue #498 - Anime quotes don't wrap long words
Fixed issue #498 - Anime quotes don't wrap long words

--- a/app/assets/stylesheets/partials/anime-page.css.scss
+++ b/app/assets/stylesheets/partials/anime-page.css.scss
@@ -62,10 +62,12 @@
     }
     .quote-text {
       margin-bottom: 10px;
+      word-wrap: break-word;
     }
     .quote-author {
       margin-bottom: 5px;
       font-weight: bold;
+      word-wrap: break-word;
     }
   }
 }
@@ -305,11 +307,12 @@
   border: 1px solid #ddd;
   padding: 10px;
   margin-top: 10px;
+  word-wrap: break-word;
 }
 
 .quote-author {
-  float: left;
   font-weight: 400;
+  word-wrap: break-word;
 }
 
 .quote-like-box {
