--- a/app/assets/stylesheets/partials/quote-page.css.scss
+++ b/app/assets/stylesheets/partials/quote-page.css.scss
@@ -3,6 +3,7 @@
   padding: 15px;
   background: #fff;
   border-radius: 3px;
+  word-wrap: break-word;
 
   .quote-input {
     margin: 10px 0;
